@@ -1,22 +1,19 @@
 package org.elasticsearch.index.analysis;
 
-import com.google.common.base.Function;
-import com.google.common.collect.FluentIterable;
 import org.apache.lucene.analysis.Tokenizer;
-import org.elasticsearch.common.inject.Inject;
-import org.elasticsearch.common.inject.assistedinject.Assisted;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.index.Index;
+import org.elasticsearch.env.Environment;
+import org.elasticsearch.index.IndexSettings;
 import org.elasticsearch.index.analysis.url.URLTokenizer;
-import org.elasticsearch.index.settings.IndexSettingsService;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Joe Linn
  * 8/1/2015
  */
-@AnalysisSettingsRequired
 public class URLTokenizerFactory extends AbstractTokenizerFactory {
     private List<URLPart> parts;
     private boolean urlDecode;
@@ -27,18 +24,14 @@ public class URLTokenizerFactory extends AbstractTokenizerFactory {
     private boolean tokenizeMalformed;
 
 
-    @Inject
-    public URLTokenizerFactory(Index index, IndexSettingsService indexSettings, @Assisted String name, @Assisted Settings settings) {
-        super(index, indexSettings.indexSettings(), name, settings);
+    public URLTokenizerFactory(IndexSettings indexSettings, Environment environment, String name, Settings settings) {
+        super(indexSettings, name, settings);
 
         String[] parts = settings.getAsArray("part");
         if (parts != null && parts.length > 0) {
-            this.parts = FluentIterable.of(parts).transform(new Function<String, URLPart>() {
-                @Override
-                public URLPart apply(String input) {
-                    return URLPart.fromString(input);
-                }
-            }).toList();
+            this.parts = Arrays.stream(parts)
+                    .map(URLPart::fromString)
+                    .collect(Collectors.toList());
         }
         this.urlDecode = settings.getAsBoolean("url_decode", false);
         this.tokenizeHost = settings.getAsBoolean("tokenize_host", true);
